--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get:
+  gap: ^3.0.1
+  shape_of_view_null_safe:
+  google_fonts: ^5.1.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.2
-
+  
 flutter:
   uses-material-design: true
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+  - assets/
   #  - images/a_dot_ham.jpeg
   # fonts:
   #   - family: Schyler
